# HDiffPatch

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  HDiffZ.cpp  HPatchZ.cpp  LICENSE  Makefile  Makefile_mt  Makefile_noDirDiff  Makefile_sync  NOTICE.txt  README.md  README_cmdline_cn.md  README_cn.md  _atosize.h  _clock_for_demo.h  _dir_ignore.h  _hextobytes.h  checksum_plugin_demo.h  compress_parallel.cpp  compress_parallel.h  compress_plugin_demo.h  decompress_plugin_demo.h  diff_demo.cpp  diffz_demo.cpp  file_for_patch.c  file_for_patch.h  hdiff.cpp  hdiffz.cpp  hdiffz_import_patch.c  hdiffz_import_patch.h  hpatch.c  hpatch_dir_listener.h  hpatchz.c  patch_demo.c  patch_demo.cpp  patchz_demo.cpp  unit_test.cpp
.github/workflows/: ci-github-actions.yml  ci.yml
bsdiff_wrapper/: bsdiff_wrapper.cpp  bsdiff_wrapper.h  bspatch_wrapper.c  bspatch_wrapper.h
builds/: _private_searchBestParams.cpp
builds/OpenHarmony_cmake/: CMakeLists.txt  hpatchz_oh.c
builds/OpenHarmony_cmake/types/libhpatchz/: index.d.ts  oh-package.json5
builds/android_ndk_jni_mk/: Android.mk  Application.mk  build_libs.bat  build_libs.sh  build_libs_patchers.sh  build_libs_zstd.sh  hpatch.c  hpatch.cpp  hpatch.h  hpatch_jni.c  hpatch_jni.cpp
builds/codeblocks/: HDiff.cbp  HDiffPatch.workspace  HDiffZ.cbp  HPatch.cbp  HPatchZ.cbp  sync_client_test.cbp  sync_server.cbp  unitTest.cbp
builds/node_js_napi/: hpatch_napi.c.inc
builds/vc/: HDiff.vcxproj  HDiffPatch.sln  HDiffZ.vcxproj  HPatch.vcxproj  HPatchZ.vcxproj  bzip2.vcxproj  hpatchz_test.vcxproj  libdeflate.vcxproj  longPathAware.exe.manifest  lzma.vcxproj  sync_client_test.vcxproj  sync_server.vcxproj  testHashClash.vcxproj  unitTest.vcxproj  zlib.vcxproj  zstd.vcxproj
builds/vc2019/: HDiffPatch.sln  HDiffZ.vcxproj  HPatchZ.vcxproj  bzip2.vcxproj  hpatchz_test.vcxproj  lzma.vcxproj  testHashClash.vcxproj  unitTest.vcxproj  zlib.vcxproj  zstd.vcxproj
builds/xcode/HDiff.xcodeproj/: project.pbxproj
builds/xcode/HDiffPatch.xcworkspace/: contents.xcworkspacedata
builds/xcode/HDiffZ.xcodeproj/: project.pbxproj
builds/xcode/HPatch.xcodeproj/: project.pbxproj
dirDiffPatch/: dir_diff.cpp  dir_diff.h  file_for_dir.h  file_for_dirDiff.h  file_for_dirPatch.h
dirDiffPatch/diff/: dir_diff.cpp  dir_diff.h
dirDiffPatch/dir_diff/: dir_diff.cpp  dir_diff.h  dir_diff_private.h  dir_diff_tools.cpp  dir_diff_tools.h  dir_manifest.cpp  dir_manifest.h  file_for_dirDiff.h
dirDiffPatch/dir_patch/: dir_patch.c  dir_patch.h  dir_patch_private.h  dir_patch_tools.c  dir_patch_tools.h  dir_patch_types.h  new_dir_output.c  new_dir_output.h  new_stream.c  new_stream.h  ref_stream.c  ref_stream.h  res_handle_limit.c  res_handle_limit.h
dirDiffPatch/patch/: dir_patch.c  dir_patch.h  ref_stream.c  ref_stream.cpp  ref_stream.h
libHDiffPatch/HDiff/: diff.cpp  diff.h  diff_base.h  diff_for_hpatch_lite.h  diff_types.h  match_block.cpp  match_block.h  match_inplace.cpp  match_inplace.h
libHDiffPatch/HPatch/: checksum_plugin.h  patch.c  patch.h  patch_base.h  patch_private.h  patch_types.h
libHDiffPatch/HPatchLite/: hpatch_lite.c  hpatch_lite.h  hpatch_lite_input_cache.h  hpatch_lite_types.h  hpatch_lite_types_private.h
libParallel/: parallel_channel.cpp  parallel_channel.h  parallel_import.cpp  parallel_import.h  parallel_import_c.c  parallel_import_c.h
libSyncUpdate/: client_download_emulation.cpp  client_download_emulation.h  client_download_test.cpp  client_download_test.h  hsync_client_test.cpp  hsync_server.cpp
libSyncUpdate/sync_client/: dir_sync_client.cpp  dir_sync_client.h  download_cache_io.cpp  download_cache_io.h  download_emulation.cpp  download_emulation.h  hsync_client_test.cpp  match_in_old.cpp  match_in_old.h  mt_by_queue.h  sync_client.cpp  sync_client.h  sync_client_main.cpp  sync_client_type.h  sync_info.cpp  sync_info.h  sync_info_client.cpp  sync_info_client.h
libSyncUpdate/sync_server/: dir_sync_server.cpp  dir_sync_server.h  hsync_server.cpp  match_in_new.cpp  match_in_new.h  sync_info_server.cpp  sync_info_server.h  sync_patch_hash_clash.h  sync_server.cpp  sync_server.h  sync_server_main.cpp
libhsync/sign_diff/: _match_in_old_sign.cpp  _match_in_old_sign.h  _sign_diff_type.h  sign_diff.cpp  sign_diff.h
libhsync/sync_client/: dict_decompress_plugin.h  dir_sync_client.cpp  dir_sync_client.h  match_in_old.cpp  match_in_old.h  match_in_types.h  sync_client.cpp  sync_client.h  sync_client_private.h  sync_client_type.h  sync_client_type_private.h  sync_diff_data.cpp  sync_diff_data.h  sync_info_client.cpp  sync_info_client.h
libhsync/sync_make/: dict_compress_plugin.h  dir_sync_make.cpp  dir_sync_make.h  hsynz_plugin.h  match_in_new.cpp  match_in_new.h  sync_hsynz_plugin.h  sync_info_make.cpp  sync_info_make.h  sync_make.cpp  sync_make.h  sync_make_hash_clash.h  sync_make_private.h
libhsync/zsync_client_wrapper/: zsync_client_type.h  zsync_client_type_private.h  zsync_client_wrapper.cpp  zsync_client_wrapper.h  zsync_info_client.cpp  zsync_info_client.h  zsync_match_in_old.cpp  zsync_match_in_old.h
libhsync/zsync_make_wrapper/: zsync_info_make.cpp  zsync_info_make.h  zsync_make_wrapper.cpp  zsync_make_wrapper.h
test/: _private_searchBestParams.cpp  hpatchz_test.cpp  testHashClash.cpp  testHashConflict.cpp  unit_test.cpp
vcdiff_wrapper/: vcdiff_wrapper.cpp  vcdiff_wrapper.h  vcpatch_code_table.c  vcpatch_code_table.h  vcpatch_wrapper.c  vcpatch_wrapper.h
(+105 files in other folders)
